2004-13-02  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/cvs-plugin/anjuta-cvs-plugin.glade: Added cvs update and commit
	* plugins/cvs-plugin/plugin.c, plugins/cvs-plugin/cvs-action.[ch],
	plugins/cvs-plugin/anjuta-cvs.ui:
	Implemented update/commit and changed menu layout 

2004-12-02  Naba Kumar  <naba@gnome.org>

	* plugins/cvs-plugin/anjuta-cvs-plugin.glade: Fixed prefernce
	property name (for cvs path property). Beautified dialogs.

2004-11-30	Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/message-view/anjuta-msgman.c: Changed callback name
	and changed switch-page handling.
	
	* plugins/cvs-plugin/cvs-actions.c:
	* plugins/cvs-plugin/cvs-execute.c:
	* plugins/cvs-plugin/anjuta-cvs-plugin.glade:
	- Implemented cvs add and cvs removed - both working now
	- Created a usefull preferences page
	

2004-11-30  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-status.c: Fixed runtime warning.
	
	* plugins/editor/Makefile.am:
	plugins/editor/anjuta-document-manager.glade,
	plugins/editor/plugin.c
	plugins/editor/plugin.h
	plugins/editor/style-editor.c (new, moved from src/),
	plugins/editor/style-editor.h (new, moved from src/),
	plugins/editor/text_editor_prefs.c: Implemented "Font and colours"
	settings in preferences.

	* plugins/editor/text_editor.c,
	plugins/editor/text_editor.h: Do not take unused args in
	text_editor_get_props().

	* src/style-editor.c, src/style-editor.h: Removed, moved to
	plugins/editor/ directory.

2004-11-29  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text_editor_cbs.c: Emit click signal in IAnjutaMarkable.
	* libanjuta/anjuta-status.c: More spacing between items.
	
2004-11-29  Naba Kumar  <naba@gnome.org>

	Patch from: Pavol Bosik  <pavol.bosik@radiantsystems.com>:
	
	* libanjuta/interfaces/libanjuta.idl,
	plugins/debug-manager/anjuta-debug-manager.plugin.in,
	plugins/debug-manager/plugin.c,
	plugins/gdb/breakpoints.c,
	plugins/gdb/breakpoints.h,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h,
	plugins/gdb/plugin.c,